mb-dark: Support modbot edit notes

--- a/musicbrainz-dark.user.css
+++ b/musicbrainz-dark.user.css
@@ -269,6 +269,12 @@
 	.edit-notes .edit-note .date {
 		color: #BBB;
 	}
+	.edit-notes .modbot {
+		color: #AAA;
+	}
+	.edit-notes .modbot a {
+		color: #888;
+	}
 	.edit-list .edit-actions {
 		color: initial;
 		background-color: #777;
