mb-dark: Darken COLLECTION HIGHLIGHTER modal

--- a/musicbrainz-userscripts-dark.user.css
+++ b/musicbrainz-userscripts-dark.user.css
@@ -6,6 +6,11 @@
 		background: #444 !important;
 	}
 
+	/* jesus2099 COLLECTION HIGHLIGHTER */
+	#collectionHighlighterModal {
+		background: #444 !important;
+	}
+
 	/* jesus2099 ELEPHANT EDITOR */
 	label[title^="saves edit note"] {
 		color: initial;
