mb-dark: Fix removal warning for unused entities

--- a/musicbrainz-dark.user.css
+++ b/musicbrainz-dark.user.css
@@ -359,6 +359,10 @@
 	div.mp,	span.mp, table.tbl tr.mp td, table.tbl tr.mp th, tr.diff-changes {
 		background: #04C !important;
 	}
+	/* automatic removal warning for unused entities */
+	p.cleanup {
+		color: initial;
+	}
 
 	/* documentation & wiki pages */
 	body.mediawiki {
