mb-dark: Limit affected subdomains using regex
Prevent the userstyle from being applied to (yet) unsupported subdomains
like https://picard.musicbrainz.org & https://picard-docs.musicbrainz.org

--- a/musicbrainz-dark.user.css
+++ b/musicbrainz-dark.user.css
@@ -1,4 +1,4 @@
-@-moz-document domain("musicbrainz.org") {
+@-moz-document regexp("https?://((beta|test|wiki)\\.)?musicbrainz\\.org(.*)") {
 	body {
 		background: #333;
 		color: #DDD;
